重构代码结构：整理数据文件到data目录，添加正泡沫因子核心模块（排除大文件）

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,10 @@ env/
 # *.pkl
 # *.csv
 
+# Large data files (exceeding GitHub's 100MB limit)
+data/个股_复权收盘价.csv
+data/个股_流通市值.csv
+
 # OS files
 .DS_Store
 Thumbs.db
